fix navbar mobile dropdown menu, and add close icon on mobile navigation

--- a/src/components/home/team/Team2.css
+++ b/src/components/home/team/Team2.css
@@ -1,4 +1,4 @@
-#speakers {
+#members {
     margin-top: 100px;
     background-color: rgb(248, 248, 248);
     padding: 20px 0;
@@ -31,14 +31,14 @@
     margin: 20px auto;
 }
 
-#speakers .speaker {
+#members .members {
     position: relative;
     overflow: hidden;
     margin-bottom: 30px;
     box-shadow: 3px 4px 11px 1px rgba(0,0,0,0.4);
 }
 
-#speakers .speaker .details {
+#members .members .details {
     background: rgba(6, 12, 34, 0.76);
     position: absolute;
     left: 0;
@@ -49,54 +49,54 @@
     transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
-#speakers .speaker .details h3 {
+#members .members .details h3 {
     color: #fff;
     font-size: 22px;
     font-weight: 600;
     margin-bottom: 5px;
 }
 
-#speakers .speaker .details p {
+#members .members .details p {
     color: #fff;
     font-size: 15px;
     margin-bottom: 10px;
     font-style: italic;
 }
 
-#speakers .speaker .details .social {
+#members .members .details .social {
     height: 40px;
     
 }
 
-#speakers .speaker .details a {
+#members .members .details a {
     color: #fff;
     margin: 0 3px;
 }
 
-#speakers .speaker .details a:hover {
+#members .members .details a:hover {
     color: #188CBD;    
 }
 
-#speakers .speaker:hover .details {
+#members .members:hover .details {
     bottom: 0;
 }
 
-#speakers-details {
+#members-details {
     padding: 60px 0;
 }
 
-#speakers-details .details h2 {
+#members-details .details h2 {
     color: #112363;
     font-size: 28px;
     font-weight: 700;
     margin-bottom: 10px;
 }
 
-#speakers-details .details .social {
+#members-details .details .social {
     margin-bottom: 15px;
 }
 
-#speakers-details .details .social a {
+#members-details .details .social a {
     background: #e9edfb;
     color: #112363;
     line-height: 1;
@@ -110,17 +110,17 @@
     justify-content: center;
 }
 
-#speakers-details .details .social a:hover {
+#members-details .details .social a:hover {
     background: #188CBD;
     color: #fff;
 }
 
-#speakers-details .details .social a i {
+#members-details .details .social a i {
     font-size: 16px;
     line-height: 0;
 }
 
-#speakers-details .details p {
+#members-details .details p {
     color: #112363;
     font-size: 15px;
     margin-bottom: 10px;
